--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Kyle Bowser | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="" #>Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Kyle Bowser | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Kyle Bowser" width="200">
+        <p>Hello, my name is Kyle Bowser and I am from Seattle Washington, though I currently live with my wife in
+            Layton Utah. I love baking, hiking, and basketball.</p>
+
+    </main>
+    <footer>
+        <p>&copy; Kyle Bowser | Layton, Utah</p>
+    </footer>
 </body>
+
+
 </html>
