Week 2 basic structures complete

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Kyle Bowser">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="A computer screen with HTML structure on it" width="128" height="128">
+    </header>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="https://www.churchofjesuschrist.org/?lang=eng">Lds.org</a>
+            </li>
+            <li>
+                <a href="https://www.wikipedia.org/">Wikipedia</a>
+            </li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, nulla?</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, ducimus!</p>
+        </section>
+    </main>
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/seattle-washington/400x640/seattle-temple-lds-865697-wallpaper.jpg"
+            alt="Seattle Washington Temple" width="200">
+    </aside>
+    <footer>
+        <p>Kyle Bowser</p>
+    </footer>
 </body>
+
 </html>
