--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kyle Bowser | WDD 130</title>
+    <meta name="description" content="Kyle Bowser, WDD130, Home page of our rafting website">
+    <meta name="author" content="Kyle Bowser">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -22,6 +24,15 @@
             Layton Utah. I love baking, hiking, and basketball.</p>
 
     </main>
+    <aside>
+        <h1>Utah, USA</h1>
+        <img src="images/utah.jpg" alt="Utah, USA">
+        <p>Utah USA is a vibrant desert smack dab in the middle of america.
+            It has large moutains famous for their skiing in the winter and the Great Salt
+            Lake is one of the largest salt water lakes in the world. There is lots to do and see
+            in the Utah so come visit soon!
+        </p>
+    </aside>
     <footer>
         <p>&copy; Kyle Bowser | Layton, Utah</p>
     </footer>
