Week 3 Code Along

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 15 September 2025 -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,6 +16,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com">Linkedin</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
@@ -22,8 +25,17 @@
         <img src="images/profile.jpg" alt="Hello, my name is Kyle Bowser" width="200">
         <p>Hello, my name is Kyle Bowser and I am from Seattle Washington, though I currently live with my wife in
             Layton Utah. I love baking, hiking, and basketball.</p>
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/seattle-washington-temple?lang=eng"
+                    target="_blank">Seattle
+                    Washington Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/phoenix-arizona-temple?lang=eng"
+                    target="_blank">Phoenix Arizona Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/layton-utah-temple?lang=eng"
+                    target="_blank">Layton Utah Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Utah, USA</h2>
         <img src="images/utah.jpg" alt="Utah, USA">
         <p>Utah USA is a vibrant desert smack dab in the middle of america.
