--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <h1>Kyle Bowser | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Kyle Bowser" width="200">
         <p>Hello, my name is Kyle Bowser and I am from Seattle Washington, though I currently live with my wife in
-            Layton Utah. I love baking, hiking, and basketball.</p>
+            Layton Utah. I love baking, hiking, and basketball. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Nulla, id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, rem! Lorem ipsum dolor sit, amet
+            consectetur adipisicing elit. Magni, repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Voluptates, esse? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, nulla. Lorem ipsum dolor.
+        </p>
         <ul class="box indent">
             <li><a href="https://www.churchofjesuschrist.org/temples/details/seattle-washington-temple?lang=eng"
                     target="_blank">Seattle
