Week 3 Added Ending

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -63,3 +63,7 @@
                 <img src="images/instagram.png" alt="Instagram Icon">
             </a>
         </nav>
+    </footer>
+</body>
+
+</html>
