--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us Page</title>
+    <title>About Us - Z-Rafting</title>
     <meta name="description" content="Kyle Bowser, WDD130, About Us page of our rafting website">
     <meta name="author" content="Kyle Bowser">
     <link rel="stylesheet" href="styles/rafting.css">
