--- a/index.html
+++ b/index.html
@@ -20,34 +20,40 @@
             <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Kyle Bowser | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Kyle Bowser" width="200">
-        <p>Hello, my name is Kyle Bowser and I am from Seattle Washington, though I currently live with my wife in
-            Layton Utah. I love baking, hiking, and basketball. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Nulla, id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, rem! Lorem ipsum dolor sit, amet
-            consectetur adipisicing elit. Magni, repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Voluptates, esse? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, nulla. Lorem ipsum dolor.
-        </p>
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/seattle-washington-temple?lang=eng"
-                    target="_blank">Seattle
-                    Washington Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/phoenix-arizona-temple?lang=eng"
-                    target="_blank">Phoenix Arizona Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/layton-utah-temple?lang=eng"
-                    target="_blank">Layton Utah Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Utah, USA</h2>
-        <img src="images/utah.jpg" alt="Utah, USA">
-        <p>Utah USA is a vibrant desert smack dab in the middle of america.
-            It has large moutains famous for their skiing in the winter and the Great Salt
-            Lake is one of the largest salt water lakes in the world. There is lots to do and see
-            in the Utah so come visit soon!
-        </p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Kyle Bowser | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Hello, my name is Kyle Bowser" width="200">
+            <p>Hello, my name is Kyle Bowser and I am from Seattle Washington, though I currently live with my wife in
+                Layton Utah. I love baking, hiking, and basketball. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit.
+                Nulla, id? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, rem! Lorem ipsum dolor sit,
+                amet
+                consectetur adipisicing elit. Magni, repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit.
+                Voluptates, esse? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, nulla. Lorem ipsum
+                dolor.
+            </p>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/seattle-washington-temple?lang=eng"
+                        target="_blank">Seattle
+                        Washington Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/phoenix-arizona-temple?lang=eng"
+                        target="_blank">Phoenix Arizona Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/layton-utah-temple?lang=eng"
+                        target="_blank">Layton Utah Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Utah, USA</h2>
+            <img src="images/utah.jpg" alt="Utah, USA">
+            <p>Utah USA is a vibrant desert smack dab in the middle of america.
+                It has large moutains famous for their skiing in the winter and the Great Salt
+                Lake is one of the largest salt water lakes in the world. There is lots to do and see
+                in the Utah so come visit soon!
+            </p>
+        </aside>
+    </div>
     <footer>
         <p>&copy; Kyle Bowser | Layton, Utah</p>
     </footer>
