--- a/week03/class-and-id.html
+++ b/week03/class-and-id.html
@@ -39,7 +39,8 @@
   border-radius: 25px;
   padding: 25px;
 }</code></pre>
-<p>Some declarations (<code>background-color</code> and <code>padding</code>, from "box" are overwritten by the same declarations in "highlight" becuase highlight appears after box in the CSS cascade.</p>
+        <p>Some declarations (<code>background-color</code> and <code>padding</code>, from "box" are overwritten by the
+            same declarations in "highlight" becuase highlight appears after box in the CSS cascade.</p>
     </div>
 
     <div id="note" class="box">
@@ -57,14 +58,16 @@
         <p>Testing the <code>note</code> ID.</p>
     </div>
 
-    <section id="best-practice">
-        <ul>
-            <li><strong>DO NOT</strong> use the same ID on multiple elements</li>
-            <li><strong>DO NOT</strong> use IDs for styling that applies to many elements</li>
-            <li><strong>DO NOT</strong> start class or ID names with numbers</li>
-            <li><strong>DO NOT</strong> use spaces in class or ID names (use hyphens or underscores)</li>
-        </ul>
-    </section>
+    <div id="note">
+
+        <section id="best-practice">
+            <ul>
+                <li><strong>DO NOT</strong> use the same ID on multiple elements</li>
+                <li><strong>DO NOT</strong> use IDs for styling that applies to many elements</li>
+                <li><strong>DO NOT</strong> start class or ID names with numbers</li>
+                <li><strong>DO NOT</strong> use spaces in class or ID names (use hyphens or underscores)</li>
+            </ul>
+        </section>
 
 
 
