Week 4 aboutUs update

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <img src="images/z-boat.png" alt="Logo" width="200">
-        <nav>
+        <nav class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -38,16 +38,42 @@
                 </p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>
                 Our company was started 40 years ago with my grandfather and was then taken over by my father
                 and was then passed on to me. Rafting is in our family and in our blood! With so many years of
                 experiance there is no one better in the industry.
             </p>
+            <img src="images/helmets.jpg" alt="helmets">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Eum, non. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+                aliquid suscipit nihil quae! Adipisci recusandae rem, ratione dolorem exercitationem quisquam?
+            </p>
         </section>
-        <section>
+        <section class="aay">
             <h2>Adventure Awaits You!</h2>
+            <figure>
+                <img src="images/section1.jpg" alt="Silicon Rapids">
+                <figcaption>Silicon Rapids</figcaption>
+            </figure>
+            <figure>
+                <img src="images/section2.jpg" alt="Beginner Course">
+                <figcaption>Beginner Course</figcaption>
+            </figure>
+            <figure>
+                <img src="images/section3.jpg" alt="Colorado Rapids">
+                <figcaption>Colorado Rapids</figcaption>
+            </figure>
+            <figure>
+                <img src="images/section4.jpg" alt="Mexico Rapids">
+                <figcaption>Mexico Rapids</figcaption>
+            </figure>
+            <figure>
+                <img src="images/section5.jpg" alt="Boulder Rapids">
+                <figcaption>Boulder Rapids</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
