Week 6 Homepage fix

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,9 +27,10 @@
         <div class="hero">
             <img src="images/homehero.jpg" alt="Rafting Image">
             <h1>Z-Rafting</h1>
-            <button type="submit"><a href="trips.html">Book Your Trip Today!</a></button>
+            <a href="trips.html" class="btn">Book A Trip!</a>
         </div>
         <section class="aay">
+            <h2>Splash into adventure!</h2>
             <figure>
                 <img src="images/home1.jpg" alt="Happy Rafters">
             </figure>
