Week 6 finished trips page

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -25,67 +25,75 @@
     </header>
     <main>
         <div class="contactinfo">
-            <h1>Z-RaftingTRIPSSSSSSSSSSSSSSSSSSS</h1>
-            <p>743 West 700 S</p>
-            <p>Salt Lake City UT</p>
-            <p>+1 (123) 456-7890</p>
-            <p>info@zrafting.com</p>
+            <h1>Z-Rafting Trip Information</h1>
         </div>
         <div class="mass">
             <div class="map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d755.5957222096409!2d-111.91280186502466!3d40.7536026378819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1759200300743!5m2!1sen!2sus"
-                    width="400" height="400" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="hero">
+                    <img src="images/trip1.jpg" alt="Colorado River">
+                    <article>
+                        <p>Colorado the beautiful trip like a dream. </p>
+                    </article>
+                </div>
+                <div class="hero">
+                    <img src="images/trip2.jpg" alt="Panama River">
+                    <article>
+                        <p>Panamas beautiful Canal an amazing trip</p>
+                    </article>
+                </div>
+                <div class="hero">
+                    <img src="images/trip3.jpg" alt="Chile River">
+                    <article>
+                        <p>Chile a place of amazing sights and challenging rapids</p>
+                    </article>
+                </div>
             </div>
-            <form>
-                <fieldset>
-                    <div>
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name">
-                    </div>
-                    <div>
-                        <label for="useremail">Email:</label>
-                        <input type="email" id="useremail" name="useremail">
-                    </div>
-                    <div class="purpose">
-                        <p>Message Purpose</p>
-                        <div class="purpose-buttons">
-                            <div class="purpose-piece">
-                                <input type="radio" id="gi" name="gi">
-                                <label for="gi">General Inquiry</label>
-                            </div>
-                            <div class="purpose-piece">
-                                <input type="radio" id="rq" name="rq">
-                                <label for="rq">Reservation Question</label>
-                            </div>
-                            <div class="purpose-piece">
-                                <input type="radio" id="ws" name="ws">
-                                <label for="ws">Website Suggestion</label>
-                            </div>
-                        </div>
-                    </div>
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="3" placeholder="Type here"></textarea>
-                    <div class="form-item column1">
-                        <input type="checkbox" id="subscribe" name="subscribe">
-                        <label for="subscribe">Please subscribe me to the monthly newsletter</label>
-                    </div>
-                </fieldset>
-                <button type="submit">Get In Touch!</button>
-            </form>
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="col">Trip</th>
+                        <th scope="col">Details</th>
+                        <th scope="col">Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Panama, PA</th>
+                        <td>
+                            Raft through the beautiful Panama Canal
+                            for a week of amazing sights and endless thrills
+                        </td>
+                        <td>10/27</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Colorado CA</th>
+                        <td>
+                            Take a relaxing trip down the Colorado
+                            for 10 days of team building and learning
+                        </td>
+                        <td>2/27</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Chile, CI</th>
+                        <td>
+                            Visit the amazing South American jungles
+                            for this challenging 2 week trip. (experianced only!)
+                        </td>
+                        <td>6/27</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Egypt, EG</th>
+                        <td>
+                            Enjoy a amzaing trip past the pyramids on this
+                            hisotric trip down the Nile River!
+                        </td>
+                        <td>8/27</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        <section class="aay two">
-            <h2>We Are Here To Serve You</h2>
-            <figure>
-                <img src="images/employee4.jpg" alt="Employee 1">
-            </figure>
-            <figure>
-                <img src="images/employee2.jpg" alt="Employee 2">
-            </figure>
-            <figure>
-                <img src="images/employee3.jpg" alt="Employee 3">
-            </figure>
+        <section class="but">
+            <a href="contact.html" class="btn">Contact Us Today</a>
         </section>
     </main>
     <footer>
